--- a/Collegez/templates/college.html
+++ b/Collegez/templates/college.html
@@ -9,5 +9,6 @@
 </head>
 <body>
         <button id="home_button" onclick="location.href=base_url">HOME</button>
+        <div id="colleges">Hello World!</div>
 </body>
 </html>
