--- a/Collegez/templates/index.html
+++ b/Collegez/templates/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
         <script src="{{ url_for('static', filename='collegez.js') }}" type="text/javascript"></script>
+        <!-- <script src="collegez.js" type="text/javascript"></script> -->
 </head>
 <body onload="loadCollegeData({{message}})">
         <div align="left">
@@ -35,6 +36,7 @@
             <area id="northeast" shape="poly" coords="935,326,793,355,806,332,794,308,758,301,748,229,768,228,775,215,786,217,836,168,831,160,851,134,891,129,903,109,975,64,979,19,1002,7,1018,47,1034,69,994,117,994,150,1008,167,947,210,937,305,929,305,927,288,919,288,917,314" onclick="getRegion('Northeast')" alt="Northeast">
         </map>
         </div>
+        <!-- <div>{{message}}</div> -->
         <div id="search_results"></div>
 </body>
 </html>
